--- a/pepene/manifest.json
+++ b/pepene/manifest.json
@@ -16,7 +16,7 @@
       }
     ],
     "id": "home.html",
-    "start_url": "home.html",
+    "start_url": "a-home.php",
     "background_color": "#000000",
     "display": "standalone",
     "theme_color": "#000"
